Log all punches and start with dam klass for svartvit